fix bug when editing only one form, other form take wrong value, up style, add line break on content area

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,5 @@
 @import "./settings";
 @import "./components/post";
+@import "./components/navbar";
 @import "./components/user";
 @import "./components/postForm";
