--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Amiri&display=swap");
-
 $color-1: rgba(255, 255, 255, 0.65);
 $color-2: #292929;
 $color-3: #1a8917;
@@ -13,47 +11,47 @@ $color-4: rgb(168, 168, 168);
 
 body {
   color: $color-2;
-	max-width: 100vw;
-	overflow-x: hidden;
-  font-family: "Amiri", serif;
-	min-height: 100vh;
-	background: rgb(141, 139, 139);
+  max-width: 100vw;
+  overflow-x: hidden;
+  min-height: 100vh;
+  background: rgb(141, 139, 139);
 }
 .body {
-	max-width: 1200px;
+  max-width: 1400px;
   width: 90%;
   margin: 0 auto;
 }
 
-.navbar {
-	max-height: 140px;
-	border-bottom: solid rgba(43, 42, 42, 0.534) 8px;
-	border-radius: 0 0 15px 15px;
-}
-
-h1,
-h2 {
-  font-size: 2rem;
-}
-
 h1 {
-	color: $color-1;
+  color: $color-1;
   margin-top: 20px;
 }
+
 input[type="submit"] {
-	border-radius: 5px;
-	margin-top: 4px;
+  padding: 10px 15px;
+  border: none;
+  display: block;
+  border-radius: 5px;
+  margin-top: 4px;
   background: $color-3;
-  width: 100px;
-  color: $color-1;
+  width: auto;
+  color: white;
   margin-left: auto;
   letter-spacing: 1px;
 }
+
 .content {
   display: grid;
-  grid-template-columns: 1fr 200px;
+  grid-template-columns: 1fr;
 }
+
 p {
-	font-size: 1.4rem;
-	line-height: 1;
+	white-space: pre-line;
+  font-size: 1.4rem;
+  line-height: 1;
+}
+
+.titleTxtArea {
+  max-width: 60%; 
+	max-height: 50px;
 }
