--- a/src/styles/components/_postForm.scss
+++ b/src/styles/components/_postForm.scss
@@ -1,39 +1,25 @@
 .form-container {
   border: 1px solid $color-2;
-  border-radius: 10px;
-  margin: 20px 0 10px;
-  width: 50%;
-  max-width: 500px;
+  margin: 50px auto 60px auto;
+  max-width: 80%;
+	background-color: $color-1; 
+	border-radius: 15px;
+	box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 
   form {
     display: flex;
     flex-direction: column;
     padding: 25px;
-		background-color: $color-1;
-		border-radius: 15px;
-		box-shadow: 0 4px 40px rgba(255, 255, 255, 0.35);
 
-    input,
     textarea {
       border: 1px solid $color-4;
 			border-radius: 10px;
-      font-family: "Amiri", serif;
       font-size: 1.2rem;
       font-weight: 600;
       padding: 5px 10px;
       resize: none;
-    }
-
-    input[type="submit"] {
-      font-weight: 500;
-			color: white;
-    }
-    input[type="text"],
-    textarea {
-      margin-bottom: 6px;
-    }
-    textarea {
-      height: 80px;
+			height: 80px;
+			margin-bottom: 6px;
     }
   }
 }
