--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -1,5 +1,6 @@
 .navbar {
-	padding-top: 15px;
+	min-width: 100vw;
+	padding: 15px;
 	max-height: 140px;
 	box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 }
