--- a/src/styles/components/_post.scss
+++ b/src/styles/components/_post.scss
@@ -28,14 +28,14 @@
   form {
     textarea {
 			width: 100%;
-      height: 50px;
+			white-space: pre-line;
       resize: none;
       border: $color-4 solid 1px;
 			border-radius: 10px;
       padding: 10px;
     }
   }
-	
+
   .author {
     position: absolute;
     right: 28px;
@@ -56,4 +56,12 @@
       object-fit: cover;
     }
   }
+}
+
+.mytextarea {
+	min-height: 80px;
+}
+
+.postTitle {
+	padding-right: 50px;
 }
