--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,34 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Amiri&display=swap");
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-}
-
 body {
   color: #292929;
   max-width: 100vw;
-  overflow-x: hidden;
-  font-family: "Amiri", serif;
   min-height: 100vh;
   background: rgb(141, 139, 139);
 }
 
 .body {
-  max-width: 1200px;
+  max-width: 1400px;
   width: 90%;
   margin: 0 auto;
-}
-
-.navbar {
-  max-height: 140px;
-  border-bottom: solid rgba(43, 42, 42, 0.534) 8px;
-  border-radius: 0 0 15px 15px;
-}
-
-h1,
-h2 {
-  font-size: 2rem;
 }
 
 h1 {
@@ -37,23 +17,39 @@ h1 {
 }
 
 input[type=submit] {
+  padding: 10px 15px;
+  border: none;
+  display: block;
   border-radius: 5px;
   margin-top: 4px;
   background: #1a8917;
-  width: 100px;
-  color: rgba(255, 255, 255, 0.65);
+  width: auto;
+  color: white;
   margin-left: auto;
   letter-spacing: 1px;
 }
 
 .content {
   display: grid;
-  grid-template-columns: 1fr 200px;
+  grid-template-columns: 1fr;
 }
 
 p {
+  white-space: pre-line;
   font-size: 1.4rem;
   line-height: 1;
+}
+
+.titleTxtArea {
+  max-width: 60%;
+  max-height: 50px;
+}
+
+.navbar {
+  min-width: 100vw;
+  padding: 15px;
+  max-height: 140px;
+  box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 }
 
 .post {
@@ -64,7 +60,7 @@ p {
   margin: 0px 0 20px;
   padding-bottom: 60px;
   background-color: rgba(255, 255, 255, 0.65);
-  box-shadow: 0 4px 40px rgba(255, 255, 255, 0.35);
+  box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 }
 .post .edit-delete {
   position: absolute;
@@ -86,22 +82,11 @@ p {
 }
 .post form textarea {
   width: 100%;
-  height: 50px;
+  white-space: pre-line;
   resize: none;
   border: rgb(168, 168, 168) solid 1px;
   border-radius: 10px;
   padding: 10px;
-}
-.post form input[type=submit] {
-  padding: 10px 5px;
-  width: 180px;
-  border: none;
-  margin: -3px 0 0 auto;
-  display: block;
-}
-.post input[type=submit] {
-  font-weight: 500;
-  color: white;
 }
 .post .author {
   position: absolute;
@@ -121,6 +106,14 @@ p {
   width: 25px;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.mytextarea {
+  min-height: 80px;
+}
+
+.postTitle {
+  padding-right: 50px;
 }
 
 .user-container {
@@ -151,37 +144,23 @@ p {
 
 .form-container {
   border: 1px solid #292929;
-  border-radius: 10px;
-  margin: 20px 0 10px;
-  width: 50%;
-  max-width: 500px;
+  margin: 50px auto 60px auto;
+  max-width: 80%;
+  background-color: rgba(255, 255, 255, 0.65);
+  border-radius: 15px;
+  box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 }
 .form-container form {
   display: flex;
   flex-direction: column;
   padding: 25px;
-  background-color: rgba(255, 255, 255, 0.65);
-  border-radius: 15px;
-  box-shadow: 0 4px 40px rgba(255, 255, 255, 0.35);
 }
-.form-container form input,
 .form-container form textarea {
   border: 1px solid rgb(168, 168, 168);
   border-radius: 10px;
-  font-family: "Amiri", serif;
   font-size: 1.2rem;
   font-weight: 600;
   padding: 5px 10px;
   resize: none;
-}
-.form-container form input[type=submit] {
-  font-weight: 500;
-  color: white;
-}
-.form-container form input[type=text],
-.form-container form textarea {
   margin-bottom: 6px;
-}
-.form-container form textarea {
-  height: 80px;
 }/*# sourceMappingURL=index.css.map */
