--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -1,4 +1,7 @@
-$color-1: rgba(255, 255, 255, 0.65);
+$font-color-light: rgb(255, 255, 255);
+$font-color-dark: #000000;
+
+$color-1: rgba(255, 255, 255, 0.55);
 $color-2: #292929;
 $color-3: #1a8917;
 $color-4: rgb(168, 168, 168);
@@ -11,10 +14,11 @@ $color-4: rgb(168, 168, 168);
 
 body {
   // overflow-x: hidden;
-  color: $color-2;
+  color: $font-color-dark;
   max-width: 100vw;
   min-height: 100vh;
-  background: rgb(141, 139, 139);
+  // background: rgb(141, 139, 139);
+  background: url(../assets/Elegant_Background-2.jpg);
 }
 
 .body {
@@ -24,7 +28,7 @@ body {
 }
 
 h1 {
-  color: $color-1;
+  color: $font-color-light;
   margin-top: 20px;
 }
 
@@ -36,7 +40,7 @@ input[type="submit"] {
   margin-top: 4px;
   background: $color-3;
   width: auto;
-  color: white;
+  color: $font-color-light;
   margin-left: auto;
   letter-spacing: 1px;
 }
