--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,8 +1,8 @@
 body {
-  color: #292929;
+  color: #000000;
   max-width: 100vw;
   min-height: 100vh;
-  background: rgb(141, 139, 139);
+  background: url(../assets/Elegant_Background-2.jpg);
 }
 
 .body {
@@ -12,7 +12,7 @@ body {
 }
 
 h1 {
-  color: rgba(255, 255, 255, 0.65);
+  color: rgb(255, 255, 255);
   margin-top: 20px;
 }
 
@@ -24,7 +24,7 @@ input[type=submit] {
   margin-top: 4px;
   background: #1a8917;
   width: auto;
-  color: white;
+  color: rgb(255, 255, 255);
   margin-left: auto;
   letter-spacing: 1px;
 }
@@ -48,7 +48,7 @@ p {
 .navbar {
   min-width: 100vw;
   padding: 15px;
-  max-height: 140px;
+  max-height: 125px;
   box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 }
 
@@ -59,7 +59,7 @@ p {
   position: relative;
   margin: 0px 0 20px;
   padding-bottom: 60px;
-  background-color: rgba(255, 255, 255, 0.65);
+  background-color: rgba(255, 255, 255, 0.55);
   box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 }
 .post .edit-delete {
@@ -107,6 +107,9 @@ p {
   -o-object-fit: cover;
      object-fit: cover;
 }
+.post p {
+  line-height: 1.2;
+}
 
 .mytextarea {
   min-height: 80px;
@@ -116,37 +119,30 @@ p {
   padding-right: 50px;
 }
 
-.user-container {
-  margin-left: 55%;
-  position: relative;
-}
-.user-container .user {
-  color: white;
-  line-height: 0;
-  border-radius: 10px;
+.user {
+  color: rgb(255, 255, 255);
   text-align: center;
-  width: 190px;
-  padding: 4px 4px 1px 4px;
+  margin-right: 3%;
 }
-.user-container h3 {
-  font-size: 1.5rem;
+.user h4 {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  line-height: 1;
 }
-.user-container img {
-  border-radius: 150px;
-  height: 60px;
-  -o-object-fit: cover;
-     object-fit: cover;
-  margin: 10px 0 8px;
+.user img {
+  border-radius: 10px;
+  height: 48px;
 }
-.user-container p {
-  font-size: 1.3rem;
+.user p {
+  font-size: 1.15rem;
+  line-height: 0.5;
 }
 
 .form-container {
   border: 1px solid #292929;
   margin: 50px auto 60px auto;
   max-width: 80%;
-  background-color: rgba(255, 255, 255, 0.65);
+  background-color: rgba(255, 255, 255, 0.55);
   border-radius: 15px;
   box-shadow: 0 4px 40px rgba(0, 0, 0, 0.35);
 }
