--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -13,7 +13,7 @@ $color-4: rgb(168, 168, 168);
 // }
 
 body {
-  // overflow-x: hidden;
+  overflow-x: hidden;
   color: $font-color-dark;
   max-width: 100vw;
   min-height: 100vh;
